--- a/yabe/app/views/Comments/list.html
+++ b/yabe/app/views/Comments/list.html
@@ -10,7 +10,7 @@
     </div>
 
     <div id="crudListTable">
-        #{crud.table fields:['content', 'post', 'author'] /}
+        #{crud.table fields:['content', 'post', 'author'] }
             #{crud.custom 'content'}
                 <a href="@{Comments.show(object.id)}">
                     ${object.content.length() > 50 ? object.content[0..50] + '…' : object.content}
