--- a/yabe/app/views/main.html
+++ b/yabe/app/views/main.html
@@ -16,7 +16,7 @@
             </div>
             <ul id="tools">
                 <li>
-                    <a href="@{Admin.index()}">Log in to write something</a>
+                    <a href="@{Admin.index()}">&{'login'}</a>
                 </li>
             </ul>
             <div id="title">
